// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading component should be a subtitle with size rendered as P 1`] = `
<p
  className="subtitle is-3"
  style={Object {}}
>
  Subtitle
</p>
`;

exports[`Heading component should be spaced 1`] = `
<p
  className="title is-spaced"
  style={Object {}}
>
  Subtitle
</p>
`;

exports[`Heading component should concat classname in props with Bulma classname 1`] = `
<h1
  className="other-class this-is-a-test title"
  style={Object {}}
>
  <p>
    Default
  </p>
</h1>
`;

exports[`Heading component should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "backgroundColor": null,
    "children": null,
    "className": "",
    "clearfix": false,
    "clipped": false,
    "heading": false,
    "hidden": false,
    "invisible": false,
    "italic": false,
    "marginless": false,
    "overlay": false,
    "paddingless": false,
    "pull": null,
    "radiusless": false,
    "renderAs": "h1",
    "responsive": undefined,
    "shadowless": false,
    "size": null,
    "spaced": false,
    "subtitle": false,
    "textAlignment": null,
    "textColor": null,
    "textSize": null,
    "textTransform": null,
    "textWeight": null,
    "unselectable": false,
    "weight": null,
  },
  "propTypes": Object {
    "backgroundColor": [Function],
    "children": [Function],
    "className": [Function],
    "clearfix": [Function],
    "clipped": [Function],
    "heading": [Function],
    "hidden": [Function],
    "invisible": [Function],
    "italic": [Function],
    "marginless": [Function],
    "overlay": [Function],
    "paddingless": [Function],
    "pull": [Function],
    "radiusless": [Function],
    "renderAs": [Function],
    "responsive": [Function],
    "shadowless": [Function],
    "size": [Function],
    "spaced": [Function],
    "subtitle": [Function],
    "textAlignment": [Function],
    "textColor": [Function],
    "textSize": [Function],
    "textTransform": [Function],
    "textWeight": [Function],
    "unselectable": [Function],
    "weight": [Function],
  },
  "render": [Function],
}
`;

exports[`Heading component should have title classname 1`] = `
<h1
  className="title"
  style={Object {}}
>
  Test 
  <a>
    Give me
  </a>
</h1>
`;

exports[`Heading component should not be spaced because is subtitle 1`] = `
<p
  className="subtitle"
  style={Object {}}
>
  Subtitle
</p>
`;

exports[`Heading component should use inline styles 1`] = `
<h1
  className="title"
  style={
    Object {
      "height": 250,
    }
  }
>
  <p>
    Default
  </p>
</h1>
`;
